--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^15.0.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5"
   },
