--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.23",
     "apexcharts": "^3.52.0",
     "axios": "^1.7.3",
     "i18next": "^23.12.2",
