--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.51.23",
     "apexcharts": "^3.52.0",
     "axios": "^1.7.3",
@@ -21,6 +22,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^15.0.1",
     "react-paginate": "^8.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5"
   },
