--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_RECAPTCHA_SITE_KEY=6LcqTCIqAAAAAELPA6c8Q417NC6Ek6EqP1y5C5CZ
+# VITE_RECAPTCHA_SITE_KEY=6LcqTCIqAAAAAELPA6c8Q417NC6Ek6EqP1y5C5CZ
+VITE_RECAPTCHA_SITE_KEY=6LcagCcqAAAAAP71zU153E9E2F7AdJtOO83GEMto
