--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-# VITE_RECAPTCHA_SITE_KEY=6LcqTCIqAAAAAELPA6c8Q417NC6Ek6EqP1y5C5CZ
-VITE_RECAPTCHA_SITE_KEY=6LcagCcqAAAAAP71zU153E9E2F7AdJtOO83GEMto
+VITE_BASE_API_URL="https://metsenatclub.xn--h28h.uz/api/v1/"
+VITE_RECAPTCHA_SITE_KEY="6LcqTCIqAAAAAELPA6c8Q417NC6Ek6EqP1y5C5CZ"
+# VITE_RECAPTCHA_SITE_KEY=6LcagCcqAAAAAP71zU153E9E2F7AdJtOO83GEMto
