--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "@tanstack/react-query": "^5.51.23",
     "apexcharts": "^3.52.0",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "i18next": "^23.12.2",
     "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^15.0.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
+    "react-tailwindcss-datepicker": "^1.7.0",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
